force-app/main/default/objects/BypassTriggersValidation__c/BypassTriggersValidation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Bypassing triggers and validation rules for specific users/profiles</description>
    <label>Bypass Triggers Validation</label>
</CustomObject>