force-app/main/default/objects/BypassTriggersValidation__c/fields/DisableValidation__c.field-meta.xml
<CustomField>
    <fullName>DisableValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disabling Validation rules</description>
    <label>Disable Validation</label>
    <type>Checkbox</type>
</CustomField>