force-app/main/default/objects/BypassTriggersValidation__c/fields/DoNotPushToPoseidon__c.field-meta.xml
<CustomField>
    <fullName>DoNotPushToPoseidon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True then Account will not be pushed to Poseidon.</description>
    <inlineHelpText>If True then Account will not be pushed to Poseidon</inlineHelpText>
    <label>Do Not Push To Poseidon</label>
    <type>Checkbox</type>
</CustomField>