force-app/main/default/objects/BypassTriggersValidation__c/fields/TriggerObject__c.field-meta.xml
<CustomField>
    <fullName>TriggerObject__c</fullName>
    <description>Stores Trigger Objects like lead/Opportunity/Account/Task for which we need to bypass.</description>
    <label>Trigger Object</label>
    <type>TextArea</type>
</CustomField>